--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "apiway",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Client side for Apiway framework",
   "main": "./dst/Apiway.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/4urbanoff/js.apiway.git"
+  },
   "scripts": {
     "build": "gulp build"
   },
